Don't do integrity checks.

--- a/layout.pug
+++ b/layout.pug
@@ -6,9 +6,9 @@ head
   link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Main-Regular.woff2' as="font" type="font/woff2" crossorigin="anonymous")
   link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
   link(href='./style.less' rel='stylesheet')
-  link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css' media="print" onload="this.media='all'" integrity='sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X' crossorigin='anonymous')
-  script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.js' integrity='sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4' crossorigin='anonymous')
-  script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js' integrity='sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa' crossorigin='anonymous' onload='renderMathInElement(document.body);')
+  link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css' media="print" onload="this.media='all'" crossorigin='anonymous')
+  script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.js' crossorigin='anonymous')
+  script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js' crossorigin='anonymous' onload='renderMathInElement(document.body);')
 a.github-corner(href='https://github.com/rgeometry/rgeometry' aria-label='View source on GitHub')
   svg(width='80' height='80' viewbox='0 0 250 250' style='fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; right: 0;' aria-hidden='true')
     path(d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z')
