--- a/layout.pug
+++ b/layout.pug
@@ -2,13 +2,16 @@ doctype html
 head
   meta(name='viewport' content='width=device-width, initial-scale=1')
   title RGeometry
-  link(ref='preload' href='VarelaRound-Regular.ttf' as="font" type="font/ttf")
-  link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Main-Regular.woff2' as="font" type="font/woff2" crossorigin="anonymous")
-  link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
-  link(href='./style.less' rel='stylesheet')
+  //- link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Main-Regular.woff2' as="font" type="font/woff2" crossorigin="anonymous")
+  //- link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
+  style
+    include:less style.less
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css' media="print" onload="this.media='all'" crossorigin='anonymous')
+
+  //- Katex
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.js' crossorigin='anonymous')
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js' crossorigin='anonymous' onload='renderMathInElement(document.body);')
+
 a.github-corner(href='https://github.com/rgeometry/rgeometry' aria-label='View source on GitHub')
   svg(width='80' height='80' viewbox='0 0 250 250' style='fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; right: 0;' aria-hidden='true')
     path(d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z')
@@ -22,7 +25,8 @@ header
     a(href='https://github.com/rgeometry/rgeometry') GitHub
     a(href='https://discord.gg/vZZmxwWjeZ') Discord
     a(href='https://docs.rs/rgeometry/') API Reference
-    a(href='https://rgeometry.org/rgeometry-playground/') Playground
+    //- a(href='https://rgeometry.org/rgeometry-playground/') Playground
+    a(href='playground.pug') Playground
     a(href='overview.pug') Landscape
     a(href='correctness.pug') Correctness
 main
