--- a/playground.less
+++ b/playground.less
@@ -37,12 +37,12 @@
 
     .render.compiling {
       iframe {
-        display: none;
+        visibility: hidden;
       }
 
       .lds-ellipsis {
         display : inline-block;
-        position: relative;
+        position: absolute;
         width   : 80px;
         height  : 80px;
       }
