--- a/layout.pug
+++ b/layout.pug
@@ -2,6 +2,8 @@ doctype html
 head
   meta(name='viewport' content='width=device-width, initial-scale=1')
   title RGeometry
+  meta(http-equiv="content-type" content="text/html; charset=utf-8")
+
   //- link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Main-Regular.woff2' as="font" type="font/woff2" crossorigin="anonymous")
   //- link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
   style
