--- a/overview.pug
+++ b/overview.pug
@@ -227,7 +227,8 @@ block content
     h3 Triangulation
     .feature-compare
       +algo('O(n \\log n)', 'Ear clipping' ,
-        {paper: "https://link.springer.com/article/10.1007/s00453-001-0028-4"
+        {paper: "https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.49.3013&rep=rep1&type=pdf"
+        ,doi: "10.1007/s00453-001-0028-4"
         ,wiki: "https://en.wikipedia.org/wiki/Polygon_triangulation#Ear_clipping_method"
         ,src: "algorithms/triangulation/earclip/index.html"
         })
