Use rustfmt in the playground.

--- a/playground.pug
+++ b/playground.pug
@@ -34,4 +34,6 @@ block content
     crossorigin="anonymous")
   script(src="https://unpkg.com/split-grid/dist/split-grid.js")
   script
+    include wasm_rustfmt.js
+  script
     include playground.js
