--- a/playground.pug
+++ b/playground.pug
@@ -23,9 +23,11 @@ block content
     | Example 2
   script(src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.0/codemirror.min.js" integrity="sha512-LwxFyHyqmDdcint8dhTSHeJuI+uH5r/vrcGkxH4QhHGP8SpNaS9MVa1BxZRNTb1GPyLBAWrjbWpZTPGgtDgJOw=="
     crossorigin="anonymous")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.0/keymap/sublime.min.js" integrity="sha512-tKUdXq4laeUDT//Pnls3DjHSmGvX2u97cNFecqNWSLjcV+J0PKwjLFBQXcYxPx9ilaNcegMNo1c0hrpRGvy1kA==" crossorigin="anonymous" referrerpolicy="no-referrer")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.0/addon/mode/simple.min.js"
     integrity="sha512-E2znx1Q2jMyWOPTL+NhviQc4Ozv77S0CwmoGsgV/6kDaCWjETBvAnWe3CB/Llusmt0lrVNuuk2RcLHYubFKgrg=="
     crossorigin="anonymous")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.0/addon/comment/comment.min.js" integrity="sha512-VQ13rjo5LQmLPtbaWGV4DWx1Zbggd+MZVj6FGT6ltCbUiAN3e/7Usf61eO9vdXENLruXjEeEC3ADoN09P00R4A==" crossorigin="anonymous" referrerpolicy="no-referrer")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.61.0/mode/rust/rust.min.js"
     integrity="sha512-g3Nhw36S0p4ZJQcky87D5M+vZbFvLrgsHWYltUy5IW0zKbvi8GlPRjJSo2CyUyQiU01Ier7u+rBABDs3BawKyQ=="
     crossorigin="anonymous")
