--- a/overview.pug
+++ b/overview.pug
@@ -254,6 +254,12 @@ block content
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.137.8264&rank=2"
         ,title: "Constrained Delaunay triangulations (1989)"
         })
+      +algo('O(n\\log n)',  'Constrained Delaunay Triangulation' ,
+        {paper: "https://dl.acm.org/doi/10.1080/13658810701492241"
+        ,doi: "10.1080/13658810701492241"
+        ,scihub: "10.1080/13658810701492241"
+        ,title: "Sweep-line algorithm for constrained Delaunay triangulation (2008)"
+        })
       +algo('O(n \\log n)', 'Delaunay Triangulation' ,
         {paper: "https://link.springer.com/article/10.1007%2FBF00977785"
         ,title: "Two algorithms for constructing a Delaunay triangulation (1980)"
