Update links and simplify styling.

--- a/index.pug
+++ b/index.pug
@@ -92,7 +92,7 @@ block content
       ,bigo: "O(n \\log n)"
       ,wiki: "https://en.wikipedia.org/wiki/Monotone_polygon"
       ,gist: "c038ccb90a21f8ebe14f17167b85d2ce"
-      ,api: "data/struct.PolygonConvex.html#method.random" })
+      ,api: "algorithms/monotone_polygon/fn.new_monotone_polygon.html" })
       p
         | Monotone polygons has at most two intersections when sliced at a given
         | angle. They are used for their properties in many algorithms, and random
