Add two more convex hull algorithms.

--- a/overview.pug
+++ b/overview.pug
@@ -195,6 +195,13 @@ block content
         ,wiki: "https://en.wikipedia.org/wiki/Graham_scan"
         ,src: "algorithms/fn.convex_hull.html"
         })
+      +algo('O(nh)', 'Point Set Convex Hull' ,
+        {doi: "10.1016/0020-0190(73)90020-3"
+        ,wiki: "https://en.wikipedia.org/wiki/Gift_wrapping_algorithm"
+        })
+      +algo('O(n \\log h)', 'Point Set Convex Hull' ,
+        {doi: "10.5555/901668"
+        })
       +algo('O(\\log n)',   'Convex point locator' ,
         {paper: "https://cp-algorithms.com/geometry/point-in-convex-polygon.html"
         ,src: "data/struct.PolygonConvex.html#method.locate"
