Update scihub address.

--- a/overview.pug
+++ b/overview.pug
@@ -7,7 +7,7 @@ mixin refs(args)
       a(href=args.paper) paper
   if args && args.scihub
     span
-      a(href="https://sci-hub.do/"+args.scihub) scihub
+      a(href="https://sci-hub.se/"+args.scihub) scihub
   if args && args.doi
     span
       a(href="https://doi.org/" + args.doi) doi
