Add more wikipedia links.

--- a/overview.pug
+++ b/overview.pug
@@ -240,32 +240,39 @@ block content
       +algo('O(n \\log^\\star n)', 'Trapezoidal Triangulation' ,
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.472.6973&rank=1"
         ,title: "A simple and fast incremental randomized algorithm for computing trapezoidal decompositions and for triangulating polygons (1991)"
+        ,wiki: "https://en.wikipedia.org/wiki/Polygon_triangulation"
         })
       +algo('O(n)', 'Randomised Linear Triangulation' ,
         {paper: "https://www.ics.uci.edu/~goodrich/pubs/dcg-tri.pdf"
+        ,wiki: "https://en.wikipedia.org/wiki/Polygon_triangulation"
         })
       +algo('O(n)',         'Linear Triangulation' ,
         {paper: "https://link.springer.com/article/10.1007/BF02574703"
         ,title: "Triangulating a simple polygon in linear time (1990)"
         ,scihub: "10.1109/fscs.1990.89541"
         ,doi: "10.1109/fscs.1990.89541"
+        ,wiki: "https://en.wikipedia.org/wiki/Polygon_triangulation"
         })      
-      +algo('O(n^2)',       'Constrained Delaunay Triangulation')
+      +algo('O(n^2)',       'Constrained Delaunay Triangulation',
+        {wiki: "https://en.wikipedia.org/wiki/Constrained_Delaunay_triangulation"})
       +algo('O(n\\log n)',  'Constrained Delaunay Triangulation' ,
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.137.8264&rank=2"
         ,title: "Constrained Delaunay triangulations (1989)"
+        ,wiki: "https://en.wikipedia.org/wiki/Constrained_Delaunay_triangulation"
         })
       +algo('O(n\\log n)',  'Constrained Delaunay Triangulation' ,
         {paper: "https://dl.acm.org/doi/10.1080/13658810701492241"
         ,doi: "10.1080/13658810701492241"
         ,scihub: "10.1080/13658810701492241"
         ,title: "Sweep-line algorithm for constrained Delaunay triangulation (2008)"
+        ,wiki: "https://en.wikipedia.org/wiki/Constrained_Delaunay_triangulation"
         })
       +algo('O(n \\log n)', 'Delaunay Triangulation' ,
         {paper: "https://link.springer.com/article/10.1007%2FBF00977785"
         ,title: "Two algorithms for constructing a Delaunay triangulation (1980)"
         ,doi: "10.1007/BF00977785"
         ,scihub: "10.1007/BF00977785"
+        ,wiki: "https://en.wikipedia.org/wiki/Delaunay_triangulation"
         })
       +algo('O(?)',         'Compatible triangulation')
 
@@ -294,10 +301,12 @@ block content
         ,title: "Clipping simple polygons with degenerate intersections"
         ,scihub: "10.1016/j.cagx.2019.100007"
         ,doi: "10.1016/j.cagx.2019.100007"
+        ,wiki: "https://en.wikipedia.org/wiki/Boolean_operations_on_polygons"
         })
       +algo('O((n+k) \\log n)', 'Boolean operations' ,
         {paper: "https://doi.org/10.1016/j.advengsoft.2013.04.004"
         ,paperTitle: "A simple algorithm for Boolean operations on polygons."
         ,scihub: "10.1016/j.advengsoft.2013.04.004"
         ,doi: "10.1016/j.advengsoft.2013.04.004"
+        ,wiki: "https://en.wikipedia.org/wiki/Boolean_operations_on_polygons"
         })
