Update DOI for convex hull algorithm.

--- a/overview.pug
+++ b/overview.pug
@@ -203,7 +203,7 @@ block content
         ,wiki: "https://en.wikipedia.org/wiki/Gift_wrapping_algorithm"
         })
       +algo('O(n \\log h)', 'Point Set Convex Hull' ,
-        {doi: "10.5555/901668"
+        {doi: "10.1137/0215021"
         })
       +algo('O(\\log n)',   'Convex point locator' ,
         {paper: "https://cp-algorithms.com/geometry/point-in-convex-polygon.html"
