add scihub links for 2d interpolation

--- a/overview.pug
+++ b/overview.pug
@@ -112,18 +112,22 @@ block content
       +algo('O(?)',         'Least-work', 
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.121.3736&rank=1"
         ,title: "A physically based approach to 2-D shape blending (1992)"
+        ,scihub: "10.1145/142920.134001"
         })
       +algo('O(?)',         'Star-skeleton',
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.116.3675"
         ,title: "Shape Blending Using the Star-Skeleton Representation (1995)"
+        ,scihub: "10.1109/38.365005"
         })
       +algo('O(?)',         'As-rigid-as-possible',
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.150.1531&rank=1"
         ,title: "As-rigid-as-possible shape interpolation (2000)"
+        ,scihub: "10.1145/344779.344859"
         })
       +algo('O(?)',         'Guaranteed intersection-free',
         {paper: "https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.25.4852&rank=1"
         ,title: "Guaranteed Intersection-Free Polygon Morphing (2001)"
+        ,scihub: "10.1016/s0097-8493(00)00108-4"
         })
 
   article.feature
