replace playground link with link to frontpage

--- a/layout.pug
+++ b/layout.pug
@@ -24,11 +24,11 @@ header
     a(href='/') RGeometry
   h2 Computational Geometry in Rust
   .btn
+    a(href='/') Home
     a(href='https://github.com/rgeometry/rgeometry') GitHub
     a(href='https://discord.gg/vZZmxwWjeZ') Discord
     a(href='https://docs.rs/rgeometry/') API Reference
     //- a(href='https://rgeometry.org/rgeometry-playground/') Playground
-    a(href='playground.pug') Playground
     a(href='overview.pug') Landscape
     a(href='correctness.pug') Correctness
 main
