trim unneeded words from the copy

--- a/index.pug
+++ b/index.pug
@@ -37,20 +37,19 @@ block content
       | of algorithms for manipulating them. This crate will be of use to you if you've ever wondered
       | if a point is inside a polygon or if a bank is adequately covered by surveillance cameras.
     p
-      b FAQ:
       dl
         dt Does RGeometry support 3D objects?
         dd Yes, but most of the algorithms are 2D only.
 
-        dt Can I compile RGeometry to JavaScript?
-        dd Yes, that is how the playground and all the interactive examples work.
+        dt Can I compile RGeometry to WASM?
+        dd Yes, that is how the interactive examples work.
 
         dt Any relation to <a href="https://hgeometry.org">HGeometry?</a>
         dd Yes, there is overlap in both developers and key concepts.
 
     p
       | Geometry is inherently visual and the quickest way to intuitively understand this
-      | library is to see it in action. Below are interactive examples of most of the algorithms.
+      | library is to see it in action.
   article#triangulate.feature
     +feature(
       {title: "Triangulation"
