add melkman demo

--- a/index.pug
+++ b/index.pug
@@ -72,6 +72,16 @@ block content
       ,api: "algorithms/fn.convex_hull.html" })
       p
         | Graham's scan implementation for finding the convex hull of a set of points.
+  article#convex-hull.feature
+    +feature(
+      {title: "Polygon Convex Hull"
+      ,bigo: "O(n)"
+      ,wiki: "https://en.wikipedia.org/wiki/Convex_hull_of_a_simple_polygon"
+      ,gist: "eac484cd855d001815d23a053919b5ca"
+      ,demo: "melkman"
+      ,api: "algorithms/convex_hull/melkman/fn.convex_hull.html" })
+      p
+        | Melkman's algorithm for finding the convex hull of a simple polygon in linear time.
   article#two-opt.feature
     +feature(
       {title: "Random Polygons"
